Implement autonomous agent delegation and task decomposition using Gemini Function Calling

--- a/doc/dev-log/2026-02-11.md
+++ b/doc/dev-log/2026-02-11.md
@@ -7,6 +7,8 @@
 - **プロジェクト初期化**: `pyproject.toml`, `compose.yaml` (旧 `docker-compose.yml`) の作成。
 - **アーキテクチャ設計**: エージェントチーム（Manager, Architect, Coder...）の役割分担を定義。
 - **ベースクラスの実装**: `Agent` (基底クラス) および `Manager` クラスの Python 実装。
+- **エージェント間連携の実装**: Function Calling (Tools) を使用し、Manager が Architect にタスクを委任 (`delegate_task`) し、結果をタスク分解 (`decompose_task`) する自律的なフローを実現。
+- **自動関数呼び出し (Automatic Function Calling)**: Gemini 1.5 の SDK 機能を活用し、再帰的な呼び出しを含むエージェント間の対話を自動化。
 - **テスト環境の構築**: `pytest` を導入し、モックを使用した単体テストを実装。
 - **CLI 実装**: `typer` と `rich` を使った `main.py` のチャットインターフェースを実装。
 - **ドキュメンテーション**:
@@ -17,7 +19,9 @@
 ## 発生した課題と解決策
 - **API クォータ超過 (429 Error)**:
     - **原因**: `main.py` の入力ループが脆弱で、EOF 時に無限ループに陥り API を連打していた。
-    - **解決**: `main.py` に例外ハンドリングと `time.sleep` を追加。また `gemini-flash-lite-latest` 系のモデルへデフォルトを変更。
+    - **解決**: `main.py` に例外ハンドリングと `time.sleep` を追加。また `gemini-1.5-flash` 系のモデルへデフォルトを変更。
+- **エージェント間通信の無限ループ懸念**:
+    - **対策**: Manager の指示出しプロンプトを調整し、「何が必要か」をまず考えさせることで無駄なツール呼び出しを抑制。今後、呼び出し回数の上限設定も検討。
 
 ## 明日の予定 / 次のステップ
 - `Architect` エージェントの実装。
