Correct model name in dev-log

--- a/doc/dev-log/2026-02-11.md
+++ b/doc/dev-log/2026-02-11.md
@@ -19,7 +19,7 @@
 ## 発生した課題と解決策
 - **API クォータ超過 (429 Error)**:
     - **原因**: `main.py` の入力ループが脆弱で、EOF 時に無限ループに陥り API を連打していた。
-    - **解決**: `main.py` に例外ハンドリングと `time.sleep` を追加。また `gemini-1.5-flash` 系のモデルへデフォルトを変更。
+    - **解決**: `main.py` に例外ハンドリングと `time.sleep` を追加。また `gemini-flash-lite-latest` 系のモデルへデフォルトを変更。
 - **エージェント間通信の無限ループ懸念**:
     - **対策**: Manager の指示出しプロンプトを調整し、「何が必要か」をまず考えさせることで無駄なツール呼び出しを抑制。今後、呼び出し回数の上限設定も検討。
 
