Update development log with insights on model selection and quota management

--- a/doc/dev-log/2026-02-11.md
+++ b/doc/dev-log/2026-02-11.md
@@ -11,17 +11,22 @@
 - **自動関数呼び出し (Automatic Function Calling)**: Gemini 1.5 の SDK 機能を活用し、再帰的な呼び出しを含むエージェント間の対話を自動化。
 - **テスト環境の構築**: `pytest` を導入し、モックを使用した単体テストを実装。
 - **CLI 実装**: `typer` と `rich` を使った `main.py` のチャットインターフェースを実装。
+- **`Coder` エージェントの実装**: Python コード生成と修正機能。
+- **サンドボックススキル (Sandbox Skill) の実装**: 生成されたコードの実行と結果の取得。
 - **ドキュメンテーション**:
     - ADR (0001〜0003) の作成。
     - テンプレート (ADR, ポストモーテム) の整備。
     - ディレクトリ構成の整理（`doc/` 配下へ）。
 
 ## 発生した課題と解決策
-- **API クォータ超過 (429 Error)**:
-    - **原因**: `main.py` の入力ループが脆弱で、EOF 時に無限ループに陥り API を連打していた。
-    - **解決**: `main.py` に例外ハンドリングと `time.sleep` を追加。また `gemini-flash-lite-latest` 系のモデルへデフォルトを変更。
-- **エージェント間通信の無限ループ懸念**:
-    - **対策**: Manager の指示出しプロンプトを調整し、「何が必要か」をまず考えさせることで無駄なツール呼び出しを抑制。今後、呼び出し回数の上限設定も検討。
+- **API クォータ超過 (429 Error) と無限ループ**:
+    - **原因**: 複数のエージェントが連携すると短時間に API リクエストが集中する。また、SDK の自動関数呼び出しを使用すると、リトライ時にチャット履歴が重複し、エージェントが同じツールを無限に呼び出す「ゾンビ・ループ」が発生していた。
+    - **解決**: 
+        1. **「手動関数呼び出しループ」の導入**: `enable_automatic_function_calling=False` に設定し、エージェント基底クラスで明示的にループと待機（インターバル）を制御。
+        2. **リトライプロトコルの洗練**: 指数バックオフを用いたリトライを実装し、失敗したターンの履歴を重複させないように修正。
+        3. **モデルの安定運用**: ツール実行を確実に行うため、現在は `gemini-1.5-flash` 系などの FC 安定モデルの使用を前提に調整中。
+- **Gemma 3 1B の試行**: クォータ上限が高いため試行したが、モデルが軽量すぎて Function Calling を正しく解釈・実行できないことが判明。
+- **Gemini 2.0 / 2.5 の選択**: `gemini-2.5-flash-lite` はクォータに達しやすく、`gemini-2.0-flash` は現在利用上限（limit: 0 等）の制限により試行が困難な状況。
 
 ## 明日の予定 / 次のステップ
 - `Architect` エージェントの実装。
