Update development log with Gemini API quota limit information for Feb 2026

--- a/doc/dev-log/2026-02-11.md
+++ b/doc/dev-log/2026-02-11.md
@@ -28,5 +28,40 @@
 - Manager から Architect へのタスク委譲ロジックの実装。
 - エージェント間通信のプロトコル洗練。
 
+## 技術メモ: Gemini API クォータ制限 (2026年2月時点)
+2026年2月現在、Gemini API（Google AI Studio）の無料枠におけるモデル別上限と、429エラーが発生する具体的な条件をまとめました。モデルの世代交代が進み、2025年末から2026年初頭にかけて制限が従来より厳格化されています。
+
+### 📊 モデル別・無料枠の上限一覧
+無料枠では、以下の3つの指標のどれか1つでも超えると「429 Resource Exhausted」エラーが発生します。
+
+| モデル名 | 1分間の回数 (RPM) | 1日の合計回数 (RPD) | 1分間のトークン量 (TPM) |
+| :--- | :--- | :--- | :--- |
+| Gemini 2.5 Pro | 5 回 | 100 回 | 250,000 |
+| Gemini 2.5 Flash | 10 回 | 250 回 | 250,000 |
+| Gemini 2.5 Flash-Lite | 15 回 | 1,000 回 | 250,000 |
+| Gemini 3 Pro (Preview) | 10 回 | 100 回 | 250,000 |
+
+> [!NOTE]
+> **Gemini 2.0 シリーズについて**
+> 2.0シリーズ（Flash等）は現在、2.5シリーズと共通の「クラス枠」としてカウントされます。例えば、2.0 Flashと2.5 Flashを混ぜて使っても、合計のFlash上限に達すると制限がかかります。
+
+### 🚨 429エラーが発生する「3つの条件」
+「429 You exceeded your current quota」が出る理由は、大きく分けて以下の3パターンです。
+
+1. **秒速でのリクエスト（RPM制限）**
+   - **条件**: 1分間に規定の回数（例：Flashなら10回）を超えてリクエストを送った場合。
+   - **特徴**: 「あと数秒〜数十秒待てば」 解除されます。
+   - **対策**: プログラムに `time.sleep(10)` を入れるなどして、リクエスト間隔を空けます。
+
+2. **1日の使いすぎ（RPD制限）**
+   - **条件**: その日の合計リクエスト数が上限（例：Proなら100回）に達した場合。
+   - **特徴**: 「翌日まで」 解除されません。
+   - **リセット時間**: 通常、**日本時間の午後5時（太平洋標準時の午前0時）**にリセットされます。
+
+3. **一度に送るデータが多すぎる（TPM制限）**
+   - **条件**: 1リクエストの文字数（トークン）が多すぎる、または短い時間に大量の長文を連続で送った場合。
+   - **特徴**: 回数（RPM）は守っていても、データの「重さ」で制限がかかります。
+   - **対策**: 長いPDFや大量のソースコードを一度に読み込ませるのを控えるか、分割して送信します。
+
 ---
 *作成者: Antigravity*
